Added external examples, fixed schema examples issue and improved README file
