# app.py
@@ -245,31 +245,36 @@ def analyze():
 
     try:
         if os.environ.get('FLASK_ENV') == 'testing':
-            response_payload = {
-                "query": query,
-                "extracted_features": {
-                    "monthly_income": 140000,
-                    "cost_of_living": 45000,
-                    "other_investments": 15000,
-                    "consumerist_expenditure": 25000,
-                    "crisis_shock_expenditure": 15000,
-                    "total_monthly_expenditure": 100000,
-                    "debt_status": "In Debt"
-                },
-                "predictions": {
-                    "financial_state_category": "High-Rate Saver (>=25% in savings)",
-                    "current_monthly_income_enough": "Yes",
-                    "current_expenditure_worth_it": "No"
-                },
-                "recommendations": {
-                    "suggested_cost_of_living": 42000.50,
-                    "suggested_other_investments": 20000.00,
-                    "suggested_consumerist_expenditure": 18000.25,
-                    "suggested_crisis_shocks": 15000.00
-                },
-                "gemini_report": "Based on your financial state metrics, your discretionary spending is highly elevated. We suggest reallocating ₹7,000 into investment routes."
+            if not query:
+                response_payload = {
+                    "error": "Query not provided. Please provide a financial query."
+                }
+                return jsonify(response_payload), 404
+            else:
+                response_payload = {"query": "medhya",
+            "extracted_features": {
+                "monthly_income": 909,
+                "cost_of_living": 958,
+                "other_investments": 795,
+                "consumerist_expenditure": 489,
+                "crisis_shock_expenditure": 391,
+                "total_monthly_expenditure": 266,
+                "debt_status": "In Debt"
+            },
+            "predictions": {
+                "financial_state_category": "High-Rate Saver (>=25% in savings)",
+                "current_monthly_income_enough": "Yes",
+                "current_expenditure_worth_it": "Yes"
+            },
+            "recommendations": {
+                "suggested_cost_of_living": 418.0,
+                "suggested_other_investments": 946.0,
+                "suggested_consumerist_expenditure": 339.0,
+                "suggested_crisis_shocks": 564.0
+            },
+            "gemini_report": "occaecati"
             }
-            return jsonify(response_payload), 200
+                return jsonify(response_payload), 200
         result = lx.extract(
             text_or_documents=query,
             prompt_description=lx_prompt,
